--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
 <body>
 
+    <h1 id="title">Welcome to: Rock, Paper, Scissors - By Louis Hough</h1>
+
+    <button id="rock" class="selectionButtons">Rock</button>
+    <button id="paper" class="selectionButtons">Paper</button>
+    <button id="scissors" class="selectionButtons">Scissors</button>
 
 <script src="script.js"></script>
 </body>
