button event listeners which execute the playround function with relevant human choice

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <body>
 
     <h1 id="title">Welcome to: Rock, Paper, Scissors - By Louis Hough</h1>
-
-    <button id="rock" class="selectionButtons">Rock</button>
-    <button id="paper" class="selectionButtons">Paper</button>
-    <button id="scissors" class="selectionButtons">Scissors</button>
+    
+    <div id="selectionButtons">
+        <button id="rockBtn" class="selectionButtons">Rock</button>
+        <button id="paperBtn" class="selectionButtons">Paper</button>
+        <button id="scissorsBtn" class="selectionButtons">Scissors</button>
+    </div>
 
 <script src="script.js"></script>
 </body>
