function to show results of round on page

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <button id="scissorsBtn" class="selectionButtons">Scissors</button>
     </div>
 
+    <div id="results"></div>
+
 <script src="script.js"></script>
 </body>
